--- a/package.json
+++ b/package.json
@@ -18,6 +18,15 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.3"
+    "module-alias": "^2.2.3",
+    "mongoose": "^8.2.3",
+    "nodemon": "^3.1.3"
+  },
+  "_moduleAliases": {
+    "@root": ".",
+    "@controllers": "controllers",
+    "@middleware": "middleware",
+    "@models": "models",
+    "@utils": "utils"
   }
 }
