--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
-  "name": "backend",
+  "name": "b-group-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "A robust backend server designed for financial transaction management. It offers secure and scalable APIs for user authentication, transaction processing, and data management, built according to industry best practices to ensure compliance with financial regulations and data protection standards.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "webpack",
+    "startb": "node dist/bundle.js"
+
   },
-  "keywords": [],
+  "keywords": [
+    "financial",
+    "transactions",
+    "management",
+    "API",
+    "backend",
+    "Node.js",
+    "security",
+    "compliance",
+    "scalable"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -16,9 +28,17 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.3",
-    "nodemon": "^3.1.3"
+    "mongoose": "^8.6.3",
+    "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.25.6",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "babel-loader": "^9.2.1",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
   }
 }
