--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.6",
