--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "nodemon server.js",
     "build": "webpack",
     "startb": "node dist/bundle.js"
-
   },
   "keywords": [
     "financial",
@@ -25,13 +24,18 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
+    "mongoose-paginate-v2": "^1.9.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.7",
+    "twilio": "^5.4.3",
+    "useragent": "^2.3.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
