--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "mongoose-paginate-v2": "^1.9.0",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.7",
+    "request": "^2.88.2",
     "twilio": "^5.4.3",
     "useragent": "^2.3.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "yamlparser": "^0.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.6",
